Fixed the bug of sign up page not showing completely on phones

--- a/assets/css/sign-up.css
+++ b/assets/css/sign-up.css
@@ -24,7 +24,7 @@ body{
     border-radius: 30px;
     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.35);
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 768px;
     max-width: 100%;
     min-height: 480px;
